services/raw/back-back-back-deployment-1.0.77.yaml
---
  kind: "Deployment"
  apiVersion: "apps/v1"
  metadata:
    name: "back-deployment-1.0.77"
    labels:
      application: "xl-demo-uccm-app"
      component: "back"
    annotations:
      xldeploy.com/version: "1.0.77"
      xldeploy.com/environment: "xl-demo-staging"
  spec:
    replicas: 1
    strategy:
      type: "RollingUpdate"
      rollingUpdate:
        maxSurge: 1
        maxUnavailable: 0
    selector:
      matchLabels:
        application: "xl-demo-uccm-app"
        component: "back"
    template:
      metadata:
        name: "back-deployment-1.0.77"
        labels:
          application: "xl-demo-uccm-app"
          component: "back"
          version: "1.0.77"
      spec:
        volumes: []
        imagePullSecrets: []
        containers:
          - name: "back"
            image: "localhost:5000/xl-demo-backend:1.0.77"
            ports:
              - containerPort: 8000
                protocol: "TCP"
            env: []
            volumeMounts: []
            terminationMessagePath: "/dev/termination-log"
            terminationMessagePolicy: "File"
            imagePullPolicy: "IfNotPresent"
        restartPolicy: "Always"
        terminationGracePeriodSeconds: 30
