services/raw/back-web-back-web-service.yaml
---
  kind: "Service"
  apiVersion: "v1"
  metadata:
    name: "back-web-service"
    labels:
      application: "xl-demo-uccm-app"
      component: "back"
  spec:
    ports:
      - port: 80
        targetPort: 8000
        protocol: "TCP"
        name: "web"
    selector:
      application: "xl-demo-uccm-app"
      component: "back"
    type: "NodePort"
