services/raw/front-web-front-web-service.yaml

  kind: "Service"
  apiVersion: "v1"
  metadata:
    name: "front-web-service"
    labels:
      application: "xl-demo-uccm-app"
      component: "front"
  spec:
    ports:
      - port: 80
        targetPort: 8000
        protocol: "TCP"
        name: "web"
    selector:
      application: "xl-demo-uccm-app"
      component: "front"
    type: "NodePort"
