services/raw/front-web-front-web-ingress.yaml

  kind: "Ingress"
  apiVersion: "extensions/v1beta1"
  metadata:
    name: "front-web-ingress"
    labels:
      application: "xl-demo-uccm-app"
      version: "1.0.77"
      component: "front"
    annotations:
      nginx.ingress.kubernetes.io/ssl-redirect: "false"
  spec:
    rules:
      - host: "xl-demo-staging.xl-demo-uccm-app.xebialabs.demo"
        http:
          paths:
            - backend:
                serviceName: "front-web-service"
                servicePort: 80
              path: "/"
